<?xml version="1.0"?>
<package format="3">
  <name>localgoal_creator</name>
  <version>0.0.0</version>
  <description>The localgoal_creator package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <build_depend>amsl_navigation_msgs</build_depend>

  <export>
  </export>
</package>
